[package]
name = "IPv6-Place"
author = "RealMrCactus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
image = "0.24.7"
pnet_packet = "0.34.0"
socket2 = "0.5.4"
tokio = { version = "1.32.0", features = ["full"] }
